<resources>
    <string name="app_name">Ryuou</string>
    <string name="channel_name">通知渠道</string>
    <string name="channel_description">通知渠道描述</string>
    <string name="notifications">通知</string>
    <string name="sound">声音</string>
    <string name="vibrate">震动</string>
    <string name="帮助">帮助</string>
    <string name="action_settings">action_settings</string>
    <string name="新建文件">新建文件</string>
    <string name="打开文件">打开文件</string>
    <string name="保存文件">保存文件</string>
    <string name="加载文件">加载文件</string>
    <string name="用户菜单">用户菜单</string>
    <string name="龙王播放器">龙王播放器</string>
    <string name="关于龙王播放器">关于龙王播放器</string>
    <string name="支持">支持</string>
    <string name="支持内容">支持内容</string>
    <string name="播放器界面">播放器界面</string>
    <string name="简介">简介</string>
    <string name="简介内容">简介内容</string>
    <string name="鸣谢">鸣谢</string>
    <string name="鸣谢内容">鸣谢内容</string>
    <string name="textview">播放器界面</string>
    <string name="textview2">解码器页面</string>
    <string name="音频页面">TextView</string>
    <string name="音频界面">音频界面</string>
    <string name="字幕界面">字幕界面</string>
    <string name="开发界面">开发界面</string>
    <string name="常规界面">常规界面</string>
    <string name="title_activity_test">testActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

<!--    主页-->
    <string name="main_video">视频</string>
    <string name="main_music">音乐</string>
    <string name="main_image">图片</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="subtitle">字幕显示</string>
    <string name="input_prefill" />
    <string name="start_time">开始时间(单位s）</string>
    <string name="End_time">结束时间(单位s）</string>
    <string name="_00_00">00:00</string>
    <string name="_20_00">20:00</string>
    <string name="undefined">undefined</string>
</resources>
